# mars-rover

./: .eslintrc.json  README.md  app.js  lerna.json  nx.json  package-lock.json  package.json  pseudo-code.md  readme.md
docs/: the-problem.md
javascript/: app.js  package.json  pseudo-code.md
javascript/src/: mission-control.js
python/: pyproject.toml
python/robot/: index.py  index_test.py
python/tests/: robot_test.py  world_test.py
python/world/: index.py
src/: mission-control.js  robot.js
test/: mission-control-test.js  robot-test.js
typescript/: Dockerfile  index.ts  jest.config.ts  package.json  pnpm-lock.yaml  readme.md
typescript/@types/: index.d.ts
typescript/data/: incorrect-input.txt
typescript/input-handler/: index.ts
typescript/robot/: index.test.ts  index.ts
typescript/world/: index.test.ts  index.ts
