[tool.poetry]
name = "mars-rovers"
version = "0.1.0"
description = ""
authors = ["Pedro Martin"]
readme = "README.md"
packages = [{include = "mars_rovers"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
